--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.itsglobally</groupId>
-    <artifactId>PureFFA-SlimeArrowEffect</artifactId>
+    <artifactId>PureFFA-CritArrowEffect</artifactId>
     <version>1.1</version>
     <packaging>jar</packaging>
 
